@@ -1,15 +1,13 @@
 package flowershop.sales;
 
 import flowershop.clock.ClockService;
-import flowershop.product.Bouquet;
-import flowershop.product.Flower;
-import flowershop.product.ProductService;
-import flowershop.services.ContractOrder;
-import flowershop.services.ContractOrderService;
-
+import flowershop.product.*;
+import flowershop.services.ReservationOrder;
+import flowershop.services.ReservationOrderService;
+import org.javamoney.moneta.Money;
 import org.salespointframework.catalog.Product;
+import org.salespointframework.catalog.Product.ProductIdentifier;
 import org.salespointframework.order.Cart;
-import org.salespointframework.order.CartItem;
 import org.salespointframework.order.OrderLine;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Controller;
@@ -17,12 +15,7 @@ import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.UUID;
+import java.util.*;
 
 
 @SessionAttributes({"fullSellPrice", "fullBuyPrice",
@@ -31,15 +24,19 @@ import java.util.UUID;
 public class SalesController {
 
 	private final ProductService productService;
+	private final GiftCardRepository giftCardRepository;
 	private final SalesService salesService;
 	private final ClockService clockService;
-	private final ContractOrderService contractOrderService;
+	private final ReservationOrderService reservationOrderService;
 
-	SalesController(ProductService productService, SalesService salesService, ClockService clockService, ContractOrderService contractOrderService) {
+	SalesController(ProductService productService, SalesService salesService,
+					ClockService clockService, ReservationOrderService reservationOrderService,
+					GiftCardRepository giftCardRepository) {
 		this.productService = productService;
 		this.salesService = salesService;
 		this.clockService = clockService;
-		this.contractOrderService = contractOrderService;
+		this.reservationOrderService = reservationOrderService;
+		this.giftCardRepository = giftCardRepository;
 	}
 
 	@ModelAttribute("buyCart")
@@ -98,6 +95,18 @@ public class SalesController {
 		flowers = productService.filterFlowersInStock(flowers);
 		bouquets = productService.filterBouquetsInStock(bouquets);
 
+		// Create a Map with adjusted quantities
+		Map<ProductIdentifier, Integer> productQuantities = new HashMap<>();
+		for (Flower flower : flowers) {
+			int adjustedQuantity = flower.getQuantity() - getReservedQuantity(flower.getName());
+			productQuantities.put(flower.getId(), Math.max(adjustedQuantity, 0));
+		}
+
+		for (Bouquet bouquet : bouquets) {
+			int adjustedQuantity = bouquet.getQuantity() - getReservedQuantity(bouquet.getName());
+			productQuantities.put(bouquet.getId(), Math.max(adjustedQuantity, 0));
+		}
+
 		// Add both flowers and bouquets together.
 		List<Product> products = new ArrayList<>();
 		products.addAll(flowers);
@@ -109,6 +118,7 @@ public class SalesController {
 		model.addAttribute("filterItem", filterItem);
 		model.addAttribute("searchInput", searchInput);
 		model.addAttribute("products", products);
+		model.addAttribute("quantities", productQuantities);
 
 		return "sales/sell";
 	}
@@ -150,24 +160,25 @@ public class SalesController {
 	}
 
 	/**
-	* @param productName the name of the product
- 	* @return the reserved quantity
- 	*/
-	 private int getReservedQuantity(String productName) {
-		
+	 * @param productName the name of the product
+	 * @return the reserved quantity
+	 */
+	private int getReservedQuantity(String productName) {
+
 		Map<Product, Integer> productQuantities = new HashMap<>();
 
-		List<ContractOrder> orders = contractOrderService.findAll();
+		List<ReservationOrder> orders = reservationOrderService.findAll();
 
-		for (ContractOrder order : orders) {
+		for (ReservationOrder order : orders) {
 			for (OrderLine line : order.getOrderLines()) {
 				Product product = productService.getProductById(line.getProductIdentifier())
-					.orElseThrow(() -> new IllegalArgumentException("Product not found: " + line.getProductIdentifier()));
+					.orElseThrow(() -> new IllegalArgumentException("Product not found: "
+						+ line.getProductIdentifier()));
 
 				int quantity = line.getQuantity().getAmount().intValue();
 				productQuantities.merge(product, quantity, Integer::sum);
 			}
-		}		
+		}
 
 		return productQuantities.entrySet().stream()
 			.filter(entry -> entry.getKey().getName().equalsIgnoreCase(productName))
@@ -185,10 +196,12 @@ public class SalesController {
 	 */
 	@PostMapping("/sell-from-cart")
 	public String sellFromCart(
-		@ModelAttribute("sellCart") Cart sellCart, Model model,
+		@ModelAttribute("sellCart") Cart sellCart,
+		Model model,
 		@RequestParam(required = false) String paymentMethod,
+		@RequestParam(required = false) String giftCardId,
 		RedirectAttributes redirAttrs
-	) {
+	) throws InsufficientFundsException {
 
 		// Alert when shop is closed
 		if (!clockService.isOpen()) {
@@ -198,27 +211,41 @@ public class SalesController {
 		}
 
 		boolean isInvalid = sellCart.get().anyMatch(ci -> {
-			if (productService.findProductsByName(ci.getProduct().getName()).get(0) instanceof Flower) {
-				return !(((Flower) productService.findProductsByName(ci.getProduct().getName()).get(0)).getQuantity()
-						- getReservedQuantity(ci.getProduct().getName()) >= ci.getQuantity().getAmount().intValue());
+			if (productService.findProductsByName(ci.getProduct().getName()).getFirst() instanceof Flower) {
+				return !(((Flower) productService.findProductsByName(ci.getProduct().getName()).getFirst()).getQuantity()
+					- getReservedQuantity(ci.getProduct().getName()) >= ci.getQuantity().getAmount().intValue());
 			} else {
-				return !(((Bouquet) productService.findProductsByName(ci.getProduct().getName()).get(0)).getQuantity()
-						- getReservedQuantity(ci.getProduct().getName()) >= ci.getQuantity().getAmount().intValue());
+				return !(((Bouquet) productService.findProductsByName(ci.getProduct().getName()).getFirst()).getQuantity()
+					- getReservedQuantity(ci.getProduct().getName()) >= ci.getQuantity().getAmount().intValue());
 			}
 		});
-		
+
 		if (isInvalid) {
 			sellCart.clear();
 			redirAttrs.addFlashAttribute("error", "There are not enough products in the storage!");
 			return "redirect:sell";
 		}
-		
 
-		if (sellCart == null || sellCart.isEmpty()) {
+		if (sellCart.isEmpty()) {
 			model.addAttribute("message", "Your basket is empty.");
 			return "redirect:sell";
 		}
-		salesService.sellProductsFromBasket(sellCart, paymentMethod);
+
+		if (paymentMethod.equals("GiftCard")) {
+			try {
+				UUID cardID = UUID.fromString(giftCardId);
+				salesService.sellProductsFromBasket(sellCart, paymentMethod, cardID);
+			} catch (InsufficientFundsException e) {
+				redirAttrs.addFlashAttribute("error", e.getMessage());
+				return "redirect:sell";
+			} catch (IllegalArgumentException e) {
+				redirAttrs.addFlashAttribute("error", "Enter correct GiftCard ID!");
+				return "redirect:sell";
+			}
+
+		} else {
+			salesService.sellProductsFromBasket(sellCart, paymentMethod, null);
+		}
 
 		double fp = salesService.calculateFullCartPrice(model, sellCart, true);
 		model.addAttribute("fullSellPrice", fp);
@@ -240,7 +267,7 @@ public class SalesController {
 		@ModelAttribute("buyCart") Cart buyCart,
 		Model model,
 		RedirectAttributes redirAttrs
-	) {
+	) throws InsufficientFundsException {
 		// Alert when shop is closed
 		if (!clockService.isOpen()) {
 			buyCart.clear();
@@ -252,7 +279,12 @@ public class SalesController {
 			model.addAttribute("message", "Your basket is empty.");
 			return "redirect:buy";
 		}
-		salesService.buyProductsFromBasket(buyCart, "Card");
+		try {
+			salesService.buyProductsFromBasket(buyCart, "Card");
+		} catch (InsufficientFundsException e) {
+			redirAttrs.addFlashAttribute("error", e.getMessage());
+			return "redirect:buy";
+		}
 
 		double fp = salesService.calculateFullCartPrice(model, buyCart, false);
 		model.addAttribute("fullBuyPrice", fp);
@@ -274,14 +306,17 @@ public class SalesController {
 	public String addToSellCart(
 		Model model,
 		@RequestParam UUID productId,
+		@RequestParam(required = false) Integer quantityInput,
 		@ModelAttribute("sellCart") Cart sellCart
 	) {
 		Product product = productService.getProductById(productId).get();
 
-		if (sellCart.getQuantity(product).getAmount().intValue() <
+		Integer tmpQuantity = (quantityInput == null || quantityInput == 0)? 1 : quantityInput;
+
+		if (sellCart.getQuantity(product).getAmount().intValue() + tmpQuantity <=
 			(product instanceof Flower ? ((Flower) product).getQuantity() :
 				((Bouquet) product).getQuantity())) {
-			sellCart.addOrUpdateItem(product, 1);
+			sellCart.addOrUpdateItem(product, tmpQuantity);
 
 			double fp = salesService.calculateFullCartPrice(model, sellCart, true);
 			model.addAttribute("fullSellPrice", fp);
@@ -350,9 +385,13 @@ public class SalesController {
 	@PostMapping("add-to-buy-cart")
 	public String addToBuyCart(Model model,
 							   @RequestParam UUID productId,
-							   @ModelAttribute("buyCart") Cart buyCart) {
+							   @ModelAttribute("buyCart") Cart buyCart,
+							   @RequestParam(required = false) Integer quantityInput) {
 		Product product = productService.getProductById(productId).get();
-		buyCart.addOrUpdateItem(product, 1);
+		
+		Integer tmpQuantity = (quantityInput == null || quantityInput == 0)? 1 : quantityInput;
+
+		buyCart.addOrUpdateItem(product, tmpQuantity);
 
 		double fp = salesService.calculateFullCartPrice(model, buyCart, false);
 		model.addAttribute("fullBuyPrice", fp);
@@ -404,6 +443,44 @@ public class SalesController {
 		double fp = salesService.calculateFullCartPrice(model, buyCart, false);
 		model.addAttribute("fullBuyPrice", fp);
 		return "redirect:/buy";
+	}
+
+	@GetMapping("/giftcard")
+	@PreAuthorize("hasRole('BOSS')")
+	public String giftCard(Model model) {
+		return "sales/giftcard";
+	}
+
+	@PostMapping("create-giftcard")
+	@PreAuthorize("hasRole('BOSS')")
+	public String createGiftCard(
+		Model model,
+		@RequestParam(required = true) Integer amount
+	) {
+
+		GiftCard giftCard = new GiftCard(Money.of(amount, "EUR"), amount.toString());
+		giftCardRepository.save(giftCard);
+
+		model.addAttribute("giftCardId", giftCard.getId());
+		return "sales/giftcard";
+	}
+
+	@GetMapping("/check-balance")
+	@PreAuthorize("hasRole('BOSS')")
+	public String checkGiftCardBalance(
+		Model model,
+		@RequestParam String giftCardId
+	) {
+		giftCardRepository.findAll()
+			.stream()
+			.filter(giftCard -> giftCard.getId().equals(giftCardId.trim()))
+			.findFirst()
+			.ifPresentOrElse(
+				giftCard -> model.addAttribute("giftCardBalance", giftCard.getBalance()),
+				() -> model.addAttribute("giftCardBalance", "THERE IS NO CARD WITH THIS ID")
+			);
+
+		return "sales/giftcard";
 	}
 }
  
